[package]
name = "homcomzk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
bitvec = "1.0.1"
blake3 = { version = "1.3.3", features = ["traits-preview"] }
digest = "0.10.6"
ff = "0.13.0"
itertools = "0.10.5"
ndarray = "0.15.6"
num-traits = "0.2.15"
rand = "0.8.5"
subtle = "2.4.1"
